--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS & FONT -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
     <link href="css/jcarousel.css" rel="stylesheet" />
     <link href="css/flexslider.css" rel="stylesheet" />
     <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" /> -->
 </head>
 
 <body>
