--- a/Tugas_02/form_pendaftaran.html
+++ b/Tugas_02/form_pendaftaran.html
@@ -67,14 +67,8 @@ RC
         <input type="radio" name="angkatan">2018
       </div>
     
-      <p>Dengan ini mengkonfirmasikan bahwa kami akan mengirimkan tim kami untuk mengikuti FIK CUP 2017 dengan memenuhi
-    persyaratan sebagai berikut: 
-    1) Mengirim 1 tim beranggotakan maksimal 12 orang pemain (Minimal mahasiswa keperawatan 3
-       orang dan sisanya adalah mahasiswa kesehatan lainnya seperti kedokteran, bidan, farmasi, dsb. ) dan 2 orang official
-       beserta biodata yang jelas. 
-    2) Mentaati semua peraturan, sistem dan jadwal pertandingan yang telah dan akan ditetapkan oleh pihak panitia penyelenggara. 
-    3) Menjaga sportifitas, ketertiban dan bertanggungjawab atas perilaku dari seluruh anggota tim dan supporter selama penyelenggaraan FIK CUP 2017. 
-    4) Dalam mendaftarkan pemain, kami telah memahami persyaratan yang telah ditetapkan panitia.</p>
+      <p>Dengan ini mengkonfirmasikan bahwa kami akan mengirimkan tim kami untuk mengikuti Informatika Cup 2023 dengan memenuhi
+    persyaratan</p>
 
       <div class="form-submit">
         <button>DAFTAR</button>
