--- a/Tugas_02/form_pendaftaran.html
+++ b/Tugas_02/form_pendaftaran.html
@@ -66,9 +66,10 @@ RC
         <br>
         <input type="radio" name="angkatan">2018
       </div>
-    
-      <p>Dengan ini mengkonfirmasikan bahwa kami akan mengirimkan tim kami untuk mengikuti Informatika Cup 2023 dengan memenuhi
-    persyaratan</p>
+      
+    <input type="checkbox" id="c1" name="cc" />
+    <label for="c1"><span></span>Dengan ini mengkonfirmasikan bahwa kami akan mengirimkan tim kami untuk mengikuti Informatika Cup 2023 dengan memenuhi
+    persyaratan</label>
 
       <div class="form-submit">
         <button>DAFTAR</button>
