--- a/Tugas_02/form_pendaftaran.html
+++ b/Tugas_02/form_pendaftaran.html
@@ -32,28 +32,27 @@ RC
         <input class="full-input" type="text" placeholder="Nama lengkap anda" required>
       </div>
       <div class="form-row">
-        <label for="nama">2. Peran Dalam Tim <span>*</span></label>
+        <label for="peran">2. Peran Dalam Tim <span>*</span></label>
         <input type="radio" name="Kapten" checked="checked" disabled="disabled">Kapten
       </div>
       <div class="form-row">
-        <label for="nama">3. Nam Tim <span>*</span></label>
+        <label for="namatim">3. Nam Tim <span>*</span></label>
         <input class="full-input" type="text" placeholder="Alamat email anda" required>
       </div>
       <div class="form-row">
-        <label for="nama">4. Anggota Tim 1 <span>*</span></label>
+        <label for="nama1">4. Anggota Tim 1 <span>*</span></label>
         <input class="full-input" type="text" placeholder="Nama Anggota Tim 1" required>
-        <label for="nama1">  Anggota Tim 2 <span>*</span></label>
+        <label for="nama2">  Anggota Tim 2 <span>*</span></label>
         <input class="full-input" type="text" placeholder="Nama Anggota Tim 2" required>
-        <label for="nama1">  Anggota Tim 3 <span>*</span></label>
+        <label for="nama3">  Anggota Tim 3 <span>*</span></label>
         <input class="full-input" type="text" placeholder="Nama Anggota Tim 3" required>
-        <label for="nama1">  Anggota Tim 4 <span>*</span></label>
+        <label for="nama4">  Anggota Tim 4 <span>*</span></label>
         <input class="full-input" type="text" placeholder="Nama Anggota Tim 4" required>
-        <label for="nama1">  Anggota Tim 5 <span>*</span></label>
+        <label for="nama5">  Anggota Tim 5 <span>*</span></label>
         <input class="full-input" type="text" placeholder="Nama Anggota Tim 5" required>
       </div>
       <div class="form-row">
-        <label for="nama">5. Angkatan</label>
-        <!-- <p class="italic">*Abaikan jika sama dengan nomor handphone.</p> -->
+        <label for="angkatan">5. Angkatan</label>
         <input type="radio" name="angkatan">2023
         <br>
         <input type="radio" name="angkatan">2022
