--- a/Tugas_02/form_pendaftaran.html
+++ b/Tugas_02/form_pendaftaran.html
@@ -7,16 +7,17 @@ RC
 <html lang="en">
 
 <head>
-    <!-- bagian judul/title -->
+    <!-- bagian title web -->
     <meta charset="utf-8">
     <title>Informatika Cup 2023</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/form_pendaftaran.css" rel="stylesheet" />
+    <!-- bagian akhir title web -->
 </head>
 
 <body>
 <div class="container">
-    <!-- Awal Header -->
+    <!-- Awal Body -->
     <div class="header">
       <h1>Formulir Pendaftaran</h1>
       <p>Silahkan mengisikan Data Tim anda dengan sesuai dan benar!</p>
@@ -73,10 +74,10 @@ RC
       <div class="form-submit">
         <button>DAFTAR</button>
       </div>
-    
+    <!-- Akhir Body -->
     </div>
   </div>
   </body>  
-
+<!-- Awal Tambahan Script -->
     <script src=".js"></script>
 </html>
